--- a/tralka.html
+++ b/tralka.html
@@ -79,7 +79,7 @@ Dentro de la cultura alimentaria del pueblo Mapuche, se practica la recolección
 
 <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/900192865?h=ea5727959b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" style="position:absolute;top:0;left:0;width:50%;height:50%;" title="[Entrevista] Mauricio Román - &quot;Tiempo&quot;"></iframe></div><script src="https://player.vimeo.com/api/player.js" class="center"></script>
   
-<p>Proceso creativo:</p>
+<p class="center">Proceso creativo:</p>
 <iframe src="https://player.vimeo.com/video/819178297?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="720" height="450" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Un Rayo... Múltiple... Fractales" class="center"></iframe>
 <iframe src="https://player.vimeo.com/video/819164671?h=6ad8270efd" width="720" height="450" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="center"></iframe>
 <iframe src="https://player.vimeo.com/video/597467578?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="720" height="450" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="TRALKA-propuesta_creativa_Mauricio_Roman_MIranda.mp4" class="center"></iframe>
