--- a/tralka.html
+++ b/tralka.html
@@ -56,7 +56,7 @@
 
 </head>
 <!-- <div><a href="https://rstartdas.github.io"><img src="https://rstartdas.github.io/img/rstart.logo.pq2.png" alt="rstart"></a></div> -->
-<body id="page-top" style="background-color:silver">
+<body id="page-top" style="background-color:black">
 <div class="topnav">
   <!-- <div><a href=""><img src="" alt=""></a>Tralka, el valle del trueno.</div> -->
   <!-- <a class="active" href="https://rstartdas.github.io"><img src="https://rstartdas.github.io/img/rstart.logo.pq2.png" alt="rstart"></a> -->
