--- a/tralka.html
+++ b/tralka.html
@@ -52,7 +52,7 @@
 }
   
 </style>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="tralkastyle.css">
 
 </head>
 <!-- <div><a href="https://rstartdas.github.io"><img src="https://rstartdas.github.io/img/rstart.logo.pq2.png" alt="rstart"></a></div> -->
