--- a/tralka.html
+++ b/tralka.html
@@ -77,7 +77,9 @@
   
   <!-- <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/597467578?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=847bec3fe9" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:60%;height:60%;" title="TRALKA-propuesta_creativa_Mauricio_Roman_MIranda.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script> -->
 
-<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/900192865?h=ea5727959b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" style="position:absolute;top:0;left:0;width:50%;height:50%;" title="[Entrevista] Mauricio Román - &quot;Tiempo&quot;"></iframe></div><script src="https://player.vimeo.com/api/player.js" class="center"></script>
+<!--<div style="padding:56.25% 0 0 0;position:relative;"> -->
+<iframe src="https://player.vimeo.com/video/900192865?h=ea5727959b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" style="position:absolute;top:0;left:0;width:50%;height:50%;" title="[Entrevista] Mauricio Román - &quot;Tiempo&quot;" class="center"></iframe>
+<!--</div><script src="https://player.vimeo.com/api/player.js" class="center"></script> -->
   
 <p class="center">Proceso creativo:</p>
 <iframe src="https://player.vimeo.com/video/819178297?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="720" height="450" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Un Rayo... Múltiple... Fractales" class="center"></iframe>
