--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
                 <li>
                     <a href="https://mauricixx.github.io/bionerxs">Bionerxs</a>
                 </li>
+                <li>
+                    <a href="https://mauricixx.github.io/Espacio_G__portafolio.pdf">Espacio-G [plataforma de arte]</a>
+                </li>
+
+
+                
                  <!-- 
                         <li>
                             <a href="#">Contacto</a>
