--- a/bionerxs.html
+++ b/bionerxs.html
@@ -51,7 +51,6 @@
 
 </head>
 
-<!-- x_x /rstart  html -->
 <!-- <body id="page-top" style="background-color:black"> -->
 <body style="background-color:black">
 
@@ -72,17 +71,17 @@
   <p></p>
 </div>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href=""><img src="" alt=""></a>
+   <!-- <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav"> -->
+     <!-- <div class="container"> -->
+        <!-- <a class="navbar-brand js-scroll-trigger" href=""><img src="" alt=""></a> -->
                 <!-- <a class="navbar-brand js-scroll-trigger" href="https://github.com/rstartdas"><img src="img/rstart.logo.pq2.png" alt="rstart"></a> -->
     <!--<a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/rstart.logo.pq2.png" alt="rstart"></a> -->
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+       <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           rstart
           <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
+        </button> -->
+       <!-- <div class="collapse navbar-collapse" id="navbarResponsive"> -->
+         <!-- <ul class="navbar-nav ml-auto"> -->
             <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#"><code>$whoami</code></a></li> -->
            <!-- <div class="dropdown"> -->
            <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="http://rstart.cl/wip">projects</a></li> -->
